--- a/tutorials/tutorial05_solutions.tex
+++ b/tutorials/tutorial05_solutions.tex
@@ -11,13 +11,13 @@
 
 \begin{document}
 \title{6G5Z3011 Multi-variable calculus and analytical methods}
-\author{Tutorial Sheet 04 - solutions}
+\author{Tutorial Sheet 05 - solutions}
 \maketitle
 
 Solutions to questions 1 -- 5 listed on the following pages under the heading of \textit{Exercise 10}
 
 Solutions to questions 6 -- 8 listed on the following pages under the heading of \textit{Exercise 11}
 
-\includepdf[pages={-}]{../exsheets/solutions/sol4.pdf}
-\includepdf[pages={-}]{../exsheets/solutions/sol5.pdf}
-\end{document}
+\includepdf[pages={-}]{./sol4.pdf}
+\includepdf[pages={-}]{./sol5.pdf}
+\end{document} 
